--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "@stripe/stripe-js": "^7.4.0",
     "@sveltejs/adapter-auto": "^6.0.1",
     "stripe": "^18.2.1"
